2007-02-21  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/derived_aggregate.adb: New test.

2007-02-21  Jakub Jelinek  <jakub@redhat.com>

	* gfortran.dg/gomp/omp_parse1.f90: New test.
	* gfortran.dg/gomp/omp_parse2.f: New test.

	Backported from mainline
	2006-12-20  Andrew Pinski  <pinskia@gmail.com>
	PR middle-end/30143
	* gcc.dg/gomp/complex-1.c: New testcase.

2007-02-19  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/self_aggregate_with_call.adb: New test.

2007-02-18  Brooks Moses  <brooks.moses@codesourcery.com>

	PR fortran/30235
	* gfortran.dg/altreturn_2.f90: new test.

2007-02-18  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/tail_call_p.ads, tail_call_p.adb, tail_call.adb: New test.

2007-02-18  Eric Botcazou  <ebotcazou@adacore.com>

	* lib/gnat.exp (gnat_target_compile): Pass -f to the driver.

2007-02-18 Ira Rosen  <irar@il.ibm.com>

	* gcc.dg/vect/vect-106-alias.c: New test.

2007-02-17  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/30554
	* gfortran.dg/used_dummy_types_6.f90: New test.
	* gfortran.dg/used_dummy_types_7.f90: New test..

	PR fortran/30617
	* gfortran.dg/intrinsic_actual_2.f90: Make this legal fortran
	by getting rid of recursive I/O and providing functions with
	results.

	PR fortran/30319
	* gfortran.dg/char_array_constructor_2.f90

2007-02-16  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/30779
	* gfortran.dg/error_recovery_3.f90: New test.

2007-02-16  Tobias Burnus  <burnus@net-b.de>

	PR fortran/30512
	* gfortran.dg/maxlocval_1.f90: New test.

2007-02-16  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR fortran/30720
	* gfortran.dg/array_function_1.f90: New test.

2007-02-16  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR fortran/30611
	* gcc/testsuite/gfortran.dg/repeat_1.f90: New test.

2007-02-16  Thomas Koenig  <Thomas.Koenig@online.de>

	PR libfortran/30389
	* gfortran.dg/achar_2.f90:  New test.
	* gfortran.dg/achar_3.f90:  New test.
