@@ -1,3 +1,8 @@
+2007-02-21  Mark Mitchell  <mark@codesourcery.com>
+
+	* testsuite/lib/libstdc++.exp (libstdc++_init): Compile testglue
+	with -fexceptions.
+
 2007-02-07  Hans-Peter Nilsson  <hp@axis.com>
 
 	PR testsuite/28870
